# marioiluigi

./: .gitignore  README.md
docs/: aktywnosc_ml_v1.html  api.md  komponenty.uxf  koncept_modelu.md  todo.txt
engine/: Cargo.toml
engine/chess_lib/: Cargo.toml  justfile
engine/chess_lib/cpp_api_tester/: main.cpp
engine/chess_lib/cpp_headers/: chess_lib.cpp  chess_lib.hpp
engine/chess_lib/src/: api_template.rs  chess_raw.rs  cpp_api.rs  lib.rs  logic.rs  parser.rs  python_api.rs  serializer.rs
engine/chess_lib/src/test/: logic_test.rs  mod.rs
engine/src/: chess_raw.rs  logic.rs  main.rs  parser.rs  simple_sim.rs
engine/tester_helper/: Cargo.toml  fen_castling_test  fen_king_vs_king  fen_whites_vs_king  test
engine/tester_helper/src/: main.rs  (+1 more)
frontend/: Board.py  Chess.py  Config.py  Piece.py  PlaceholderBot.py  PlaceholderRules.py
frontend_2/: Board.py  Bot.py  Button.py  Chess.py  Config.py  Game.py  Menu.py
frontend_2/mcts/: todo.txt
frontend_2/src/: chess_agent.py  chess_utils.py  main.py  q_learning.py  train_utils.py
machine_learning/: README.md  requirements.txt  todo.txt
machine_learning/datasets/: all.tsv  fen_moves.tsv  note.txt  openings.py
machine_learning/fen/: mate_in_1.fen  mate_in_2.fen  mate_in_5.fen
machine_learning/mcts/: MCTS.hpp  Makefile  __init__.py  mcts.i  mcts.py  mcts_interface.py
machine_learning/src/: add_openings.py  alpha_zero_net.py  chess_agent.py  luigi_cnn.py  main.py  mask_layer.py  train_utils.py
shared/: api.py  network_evaluation.py  rules_to_tensor.py  rules_to_tensor_example.txt  todo.txt
(+28 files in other folders)
