[package]
name = "chess_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chess_lib"


[dependencies]
derive-new = "0.7.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
pyo3 = { version = "0.23.1", features = ["extension-module"] }
strum = "0.26.3"
strum_macros = "0.26.4"
